turmites.lessons.turmites.langtoncolors.LangtonColors.scala.error
LangtonsAnt:15: error: not found: value i
   if(rule(i)=="L") gauche();
           ^