turmites.lessons.turmites.langtoncolors.LangtonColors.scala.code
def step(rule:Array[Char], colors:Array[Color]) {
  
  var j=0
  for(i<-0 to rule.length-1)
  {
     if(colors(i)==getCouleurSol())j=i;
  }
  
  if(j<colors.length-1)setCouleurBrosse(colors(j+1))
  else setCouleurBrosse(colors(0))
    
  	baisseBrosse()
  	leveBrosse()
   if(rule(i)=="L") gauche();
   else avance()
  
  
}